* Added support for multiple displays.
* Added SpeedoWidget.
* Added AssembledWidget to combine existing Widgets to create a new and more complex one in an efficient way.
* Added support for images to style the ETV Widgets. Images are made by Daniel Zemla.
* Added a Director plugin and editor extension to control a remote in game rfDynHUD from a Director mode in the editor.

Minor:

* Fixed laptimes to be properly displayed after finishing the race.
* Added a "No Border" button to the border selector. (Simply sets the selected border alias to an empty string)
* Dirty flag is now set when the %/px button is pressed for position and size properties.
* Positioning property is now properly modified when dragging a Widget around. This also fixes the inability to move a centered Widget to the left or right boudary.
* Added multiple visibility flags to properly handle visibility.
* Improved StandingsWidget update frequency to only update when things can have changed.
* Fixed clear rectangles for drawn strings (fixes very small StandingsWidgets).
* Max revs are now handled better to improve the workaround for an rf-plugin-interface bug.
* The Widget name is now applied to the InputBindingsManager when a Widget is doubleclicked (instead of selection change).
* An image can now be selected in the ImageSelector through a double click.
* When adding a new Widget, it is now added to the center of the current viewport instead of absolute top left.
* Editor: New magnet/rail effect (theoretically replaces the grid, but I left it in).
* StartingLightWidget's visibility handling changed. Make sure, initialVisibility is on, if you don't plan to toggle it with an InputAction.
* StartingLightWidget is now auto-sized based on the number of lights (track dependent).
* RevMeterWidget: When the background image is changed, positions and sizes of elements are adjusted.
* Moved border configurations from config/images/borders to config/borders