@@ -2,6 +2,9 @@
 codepage = UTF-8
 language = en
 
+[net.ctdp.rfdynhud.widgets.etv2010.fastestlap.ETVFastestLapWidget]
+caption.fastestLap = "Fastest Lap"
+
 [net.ctdp.rfdynhud.widgets.etv2010.sessionstate.ETVSessionStateWidget]
 caption.TEST_DAY.laps = "Lap"
 caption.TEST_DAY.time = "Time"
