@@ -1,0 +1,3 @@
+<p>
+The <strong>visibleTime</strong> property defines the time in seconds to keep the Widget visible.
+</p>
