@@ -1,0 +1,4 @@
+<p>
+The <strong>FastestLapWidget</strong> from the &quot;Ecclestone TV&quot; Widgets Set displays the
+current fastest lap and the driver, who did it.
+</p>
